force-app/main/default/objects/Transfer_Shipping_Manifest__c/Transfer_Shipping_Manifest__c.object-meta.xml
<CustomObject>
    <description>Used in the generation of compliance document to enable transfer of products between licensed location</description>
    <label>Transfer Shipping Manifest</label>
    <nameField>
        <displayFormat>TSM-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Transfer Shipping Manifest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Shipping Manifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>