force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Actual_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Date_Time__c</fullName>
    <label>Actual Departure Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>