force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>