force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Address__c</fullName>
    <formula>Distributor_License__r.License_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Address</label>
    <type>Text</type>
</CustomField>