force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests as Distributor</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>