force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/drivers__c.field-meta.xml
<CustomField>
    <fullName>drivers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>