force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests as Ownership</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests3</relationshipName>
    <type>Lookup</type>
</CustomField>