force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Planned_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Transfer_Date__c</fullName>
    <label>Planned Transfer Date</label>
    <type>Date</type>
</CustomField>