force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to Purchase Order</description>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>