force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests as Receiver</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests1</relationshipName>
    <type>Lookup</type>
</CustomField>