force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests2</relationshipName>
    <type>Lookup</type>
</CustomField>