force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Supplier_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_First_Name__c</fullName>
    <description>Supplier first name</description>
    <formula>Supplier_Contact__r.FirstName</formula>
    <label>Supplier Contact First Name</label>
    <type>Text</type>
</CustomField>