force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <formula>Supplier_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Email</label>
    <type>Text</type>
</CustomField>