force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Supplier_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Number__c</fullName>
    <formula>Supplier_License__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier License Number</label>
    <type>Text</type>
</CustomField>