force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests as Supplier</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests2</relationshipName>
    <type>Lookup</type>
</CustomField>