force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Total_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Tax__c</fullName>
    <label>Total Cultivation Tax</label>
    <summarizedField>Transfer_Shipping_Manifest_Line__c.Subtotal_Cultivation_Tax__c</summarizedField>
    <summaryForeignKey>Transfer_Shipping_Manifest_Line__c.Transfer_Shipping_Manifest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>