force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <label>Total Line Items</label>
    <summaryForeignKey>Transfer_Shipping_Manifest_Line__c.Transfer_Shipping_Manifest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>