force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Total_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Cost__c</fullName>
    <label>Total Product Cost</label>
    <summarizedField>Transfer_Shipping_Manifest_Line__c.Line_Total_Cost__c</summarizedField>
    <summaryForeignKey>Transfer_Shipping_Manifest_Line__c.Transfer_Shipping_Manifest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>