force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Transfer_City__c.field-meta.xml
<CustomField>
    <fullName>Transfer_City__c</fullName>
    <formula>TEXT(Supplier_License__r.License_City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer City</label>
    <type>Text</type>
</CustomField>