force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Transfer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Instructions__c</fullName>
    <label>Transfer Instructions</label>
    <type>TextArea</type>
</CustomField>