force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicles__c.Vehicle_in_Use__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Transfer Shipping Manifests</relationshipLabel>
    <relationshipName>Transfer_Shipping_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>