force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Vehicle_LPN__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_LPN__c</fullName>
    <formula>Vehicle__r.Vehicle_License_Plate_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle LPN</label>
    <type>Text</type>
</CustomField>