force-app/main/default/objects/Transfer_Shipping_Manifest__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <formula>TEXT(Vehicle__r.Vehicle_Make__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Make</label>
    <type>Text</type>
</CustomField>